--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-size: 100%;
+    background-image: url(./img/angular.jpg);
+
+}
+.title{
+    font-family: 'Lobster', cursive;
+    text-align: center;
+}
+.red{
+    color: red;
+}
+
